# ignis

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
plugins/asteroids/: ignis.toml
plugins/asteroids/plugin/: Cargo.toml
plugins/asteroids/plugin/src/: lib.rs
plugins/hello-world/: hello_world.wasm  ignis.toml
plugins/hello-world/plugin/: Cargo.toml
plugins/hello-world/plugin/src/: lib.rs
plugins/space-invaders/: ignis.toml  space_invaders.wasm
plugins/space-invaders/plugin/: Cargo.toml
plugins/space-invaders/plugin/src/: lib.rs
plugins/space-invaders/plugin/wit/: ignis-game.wit
plugins/tetris/: ignis.toml  tetris.wasm
plugins/tetris/plugin/: Cargo.toml
plugins/tetris/plugin/src/: lib.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: keybindings.rs  mod.rs  players.rs  scores.rs
src-tauri/src/engine/: mod.rs  types.rs
src-tauri/src/input/: mod.rs
src-tauri/src/plugin/: discovery.rs  mod.rs
src/components/: Layout.tsx
src/input/: InputManager.ts
src/lib/: renderBridge.ts  tauri.ts  types.ts
src/pages/: GameView.tsx  HighScores.tsx  MainMenu.tsx  PlayerSelect.tsx  Settings.tsx
src/renderer/: AudioManager.ts  FrameRenderer.ts  PixiApp.ts  SpriteManager.ts
