[package]
name = "ignis"
version = "0.1.0"
description = "A modular arcade cabinet desktop app"
authors = ["Alvaro Tolentino"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ignis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
wasmtime = { version = "42", features = ["component-model", "cranelift"] }
wasmtime-wasi = "42"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
